<resources>
    <string name="app_name">ADTx2</string>
    <string name="Item_Name">nazwa</string>
    <string name="Item_Price">cena</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="adt_deluxe">ADT DElUXE</string>
    <string name="baza_przedmiot_w">Baza Przedmiotów</string>
    <string name="baza_zam_wie">Baza Zamówień</string>
    <string name="wyj_cie">wyjście</string>
    <string name="madebydomino">madeByDomino</string>
    <string name="nowe_zam_wienie">Nowe Zamówienie</string>
    <string name="x">X</string>
    <string name="dodaj_przedmiot">dodaj przedmiot</string>
    <string name="_00">00</string>
    <string name="przedmiot">przedmiot</string>
    <string name="zam_w">Zamów</string>
    <string name="zam_wienie">Zamówienie</string>
</resources>
