<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        android:text="@string/adt_deluxe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/adt_deluxe"
            android:gravity="center"
            android:textColor="#ffffff"
            android:textSize="30sp"></TextView>
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:gravity="center"
        android:layout_margin="50dp"
     >

        <Button
            android:id="@+id/db"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/calc"
            android:text="@string/baza_przedmiot_w" />

        <Button
            android:id="@+id/order"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/db"
            android:text="@string/baza_zam_wie" />

        <Button
            android:id="@+id/calc"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/nowe_zam_wienie" />
        <Button
            android:id="@+id/exitAll"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/order"
            android:layout_marginTop="30dp"
            android:text="@string/wyj_cie" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/madebydomino"></TextView>


</RelativeLayout>

